940408: Feurst configurator css fixes adjust fixtures on mobile revert buttons on summary

--- a/web/static/feurst.css
+++ b/web/static/feurst.css
@@ -187,6 +187,10 @@ h2,
   flex-direction: column;
 }
 
+.flex-column-reverse {
+  flex-direction: column-reverse;
+}
+
 .flex-wrap {
   flex-wrap: wrap;
 }
@@ -204,6 +208,10 @@ h2,
 .justify-between {
   justify-content: space-between;
 }
+.justify-end {
+  justify-content: end;
+}
+
 .justify-self-end {
   justify-self: end;
 }	
@@ -261,6 +269,8 @@ h2,
 .w-full {
   width: 100%;
 }
+
+.w-fit {width: fit-content;}
 
 .h-full {
   height: 100%;
@@ -422,8 +432,6 @@ h2,
 
 .rounded-container {
   background: #fff;
-  margin: 1rem;
-  padding: 1rem;
   border-radius: 20px;
 }
 
@@ -558,6 +566,10 @@ dl {
     grid-template-columns: max-content auto;
   }
 
+  .md-gap-x-4 {
+    column-gap: 1rem;
+  }
+
   .md-gap-y-8 {
     row-gap: 4rem;
   }
@@ -578,12 +590,26 @@ dl {
     flex-wrap: wrap;
   }
 
+  .md-p-4 {
+    padding: 1rem;
+  }
+
+  .md-m-4 {
+    margin: 1rem;
+  }
+
   .md-ml-12 {
     margin-left: 3rem !important;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1024px) {
+  .lg-flex-row {
+    flex-direction: row;
+  }
+}
+
+@media screen and (min-width: 1280px) {
   body {
     background: none !important;
   }
